fix: tweak page padding and header font size on mobile (#98)

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -18,6 +18,7 @@
     justify-content: space-between;
     gap: 8px;
     border-bottom: 1px solid var(--black);
+    font: var(--paragraph3);
 }
 
 .logo {
@@ -28,7 +29,6 @@
 .advertisingText {
     display: inline-block;
     margin-right: 16px;
-    font: var(--paragraph3);
     white-space: nowrap;
 }
 
@@ -66,7 +66,6 @@
 
 .shopNow {
     text-align: center;
-    font: var(--paragraph3);
     line-height: 1;
     color: var(--black);
     padding: 3px 11px 4px;
@@ -114,5 +113,6 @@
         flex-direction: column-reverse;
         align-items: start;
         justify-content: center;
+        font-size: 13px;
     }
 }
